--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year Project</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="bg-img">
+      <div class="title">
+        <h3>Happy New year</h3>
+        <h1>New Year Party</h1>
+        <h1 id="cent">Celebration</h1>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
